tests/valid_inputs/assign_mod.cpp
// test '%='

int main() {
	int a = 42;
	return a %= 100;
}
