tests/invalid_inputs/sema/def_arg_refers_to_previous_arg.cpp
// this is invalid
void foo(int a, int b = a) {

}

int main() {

}
